# KronosFinceptLab

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SPEC.md  START_GUIDE.md  config.toml  docker-compose.yml  kronos.bat  kronos.sh  kronos_forecast.bat  pyproject.toml  repair_progress_20260723.json  requirements.txt  start.bat  start.sh  start_kronos_gpu.bat  stop.bat  stop_kronos_gpu.bat  test_kronos_windows.bat  test_predict_601398.py  test_real_inference.py  tmp_tx_request.json  webpage_design_prompt.md
docs/: API.md  ARCHITECTURE.md  CLI.md  DEPLOYMENT.md  FINCEPT_INTEGRATION.md  LOGGING_FIX_REPORT.md  RUST_MIGRATION_SPEC.md  RUST_PHASE2_BOUNDARY.md  START_GUIDE.md  WINDOWS_KRONOS_GUIDE.md  spec_v109_upstream_integration.md  spec_web_page_completion.md
examples/: backtest_a_stock_ranking.py  request.batch.json  request.forecast.json  request.real.json  run_forecast.py  sample_ohlcv.csv
integrations/: __init__.py
kronos_mcp/: README.md  __init__.py  kronos_mcp_server.py
scripts/: benchmark_rust_native.py  check_no_emoji.py  check_web_deps.js  check_zeabur_build.ps1  check_zeabur_build.sh  ga  install-hooks.sh  install_bridge.sh  install_torch.sh  pre-commit-hook  suggestions_pregen.py  win_launcher.py  zeabur_start.sh
tests/: conftest.py  test_alert_engine.py  test_anysearch.py  test_api.py  test_call_structured_llm_json_3x.py  test_cli.py  test_cli_contract.py  test_config_hardening.py  test_data_adapter.py  test_data_sources_cache.py  test_dbnomics_provider.py  test_dcf.py  test_default_rss_protection.py  test_derivatives.py  test_dockerfile_hf_token.py  test_dynamic_model_name.py  test_entrypoint_alignment.py  test_financial.py  test_fincept_bridge.py  test_fincept_integration.py  test_indicators_strategies.py  test_kronos_real.py  test_kronos_upstream_contract_modalities.py  test_llm_chain_policy.py  test_llm_fallback_chain_3x.py  test_macro_v101_providers.py  test_macro_v102_agent.py  test_portfolio.py  test_real_deepseek_modalities.py  test_real_llm_modalities.py  test_risk.py  test_rust_native_bridge.py  test_schemas.py  test_security_hardening.py  test_stooq_source.py  test_suggestions.py  test_upstream_catchup_features.py  test_v100_bugfix_deploy_hardening.py  (+51 more)
(+176 files in other folders)
