[workspace]
members = [
    "crates/kronos-kernel",
    "crates/kronos-python",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/local/kronos-fincept-lab"

[workspace.dependencies]
kronos-kernel = { path = "crates/kronos-kernel" }
pyo3 = { version = "0.27", features = ["extension-module"] }
