[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kronos-fincept-lab"
version = "2.0.0"
description = "Independent Python + Web financial quantitative analysis platform powered by Kronos."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
    "pydantic>=2.0",
    "python-multipart>=0.0.6",
]
kronos = [
    "torch>=2.0",
    "huggingface-hub>=0.20",
]
astock = [
    "akshare>=1.10",
]
cli = [
    "click>=8.0",
    "rich>=13.0",
]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]
rust = [
    "maturin>=1.8,<2",
]

[project.scripts]
kronos-api = "kronos_fincept.api.app:main"
kronos = "kronos_fincept.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
